argocd/argocd-image-updater-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-image-updater-controller
spec:
  template:
    spec:
      containers:
      - name: argocd-image-updater-controller
        volumeMounts:
        - name: image-updater-conf
          mountPath: /app/config
        - name: auth-scripts
          mountPath: /scripts
      volumes:
      - name: image-updater-conf
        configMap:
          name: argocd-image-updater-config
          items:
          - key: registries.conf
            path: registries.conf
      - name: auth-scripts
        configMap:
          name: argocd-image-updater-config
          defaultMode: 0755
          items:
          - key: auth1.sh
            path: auth1.sh
